# dna_parent_test

./: .gitignore  README.md  pyproject.toml
dna_parent_test/: __init__.py  cli.py  kinship.py  s3_utils.py  vcf_utils.py
tests/: test_basic.py
